--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -62,3 +62,22 @@ body, html {
     z-index: 30; /* 마커 위에 표시 */
     display: none; /* 초기에는 숨김 */
 }
+
+#board-button {
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #28a745;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    z-index: 50;
+  }
+  
+  #board-button:hover {
+    background-color: #218838;
+  }
